# aula06

./: .flake8  main.py  pyproject.toml
