[project]
name = "aula06"
version = "0.1.0"
description = ""
authors = [
    {name = "Maycon",email = "mayconfabricio2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blue (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
